--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=تحميل منتجات التجارة من سحابة 
 analyzer=المحلل
 analyzer-help=تحديد المحلل المراد استخدامه في حقول مستند الإدخال. في حالة تركه فارغًا، يتم ضبط الإعداد الافتراضي على المحلل المرتبط بالإدخال الأول في تكوين الحقول.
 and=و
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=والمشغل
 and-or-operator=و/أو المشغل
 and-then-by=ثم من قبل
