--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Качване на продукти в облака н
 analyzer=Анализатор (Automatic Translation)
 analyzer-help=Задайте анализатора, който да се използва в полетата на входния документ. Ако остане празно, това по подразбиране се извършва от анализатора, свързан с първия запис в конфигурацията на полетата. (Automatic Translation)
 and=И
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=и оператор (Automatic Translation)
 and-or-operator=и/или оператор (Automatic Translation)
 and-then-by=и след това (Automatic Translation)
