--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Càrrega de productes de comerç d'Analytics Cloud
 analyzer=Analitzador
 analyzer-help=L'analitzador que s'utilitza per analitzar el text de forma lliure. Per defecte, s'utilitza l'analitzador associat al primer camp.
 and=i
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Operador Y
 and-or-operator=I/O operador
 and-then-by=i després per
