--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Upload af Analytics Cloud Commerce-produkter (Automatic
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Angiv den analysator, der skal bruges i inputdokumentets felter. Hvis feltet ikke udfyldes, angives dette som standard til den analysator, der er tilknyttet den første post i feltkonfigurationen. (Automatic Translation)
 and=And (Automatic Copy)
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Og operatør (Automatic Translation)
 and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=And Then By (Automatic Copy)
