--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Hochladen von Analytics-Cloud-Handelsprodukten
 analyzer=Analysewerkzeug
 analyzer-help=Das Analysewerkzeug, mit dem der Freiformtext analysiert wird. Standard ist das Analysewerkzeug, das bei den Feldern mit dem ersten Feld verknüpft ist.
 and=und
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Und-Operator
 and-or-operator=Und-/Oder-Operator
 and-then-by=und dann nach
