--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce'i toodete üleslaadimine (Auto
 analyzer=Analüsaator (Automatic Translation)
 analyzer-help=Määrake sisenddokumendi väljadel kasutatav analüsaator. Kui see jäetakse tühjaks, on see vaikimisi analüsaator, mis on seostatud väljakonfiguratsiooni esimese kandega. (Automatic Translation)
 and=Ja
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Ja operaator (Automatic Translation)
 and-or-operator=Ja/või operaator (Automatic Translation)
 and-then-by=Ja siis (Automatic Translation)
