--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=تجزیه و تحلیل ابر تجارت محصولا
 analyzer=آنالایزر (Automatic Translation)
 analyzer-help=تحلیلگر را برای استفاده در زمینه های سند ورودی مشخص کنید. اگر خالی مانده باشد، این پیش فرض ها به تحلیلگر مرتبط با اولین ورودی در پیکربندی فیلدها است. (Automatic Translation)
 and=و
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=اضافه کردن عملگر
 and-or-operator=عملگر و&يا
 and-then-by=و سپس توسط
