--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics-pilven Kaupankäynti Tuotteiden Lataus palvel
 analyzer=Analysoija
 analyzer-help=Analysoija, jota käytetään analysoimaan vapaamuotoista tekstiä. Oletusarvo on analysoija, joka liittyy kenttien ensimmäiseen kenttään.
 and=ja
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=ja operaattori
 and-or-operator=ja/tai operaattori
 and-then-by=ja sitten jollekin
