--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Téléversement des produits commerciaux de Cloud analy
 analyzer=Analyseur
 analyzer-help=L'analyseur utilisé pour analyser le texte brut. Par défaut pour l'analyseur utilisé pour le premier champ, dans champs.
 and=ET
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Opérateur ET
 and-or-operator=Opérateurs ET/OU
 and-then-by=Puis par
