--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics felhő – kereskedelmi termékek feltöltés
 analyzer=Elemző
 analyzer-help=A kötetlen szöveg elemzéséhez használt elemző. A mezők közül az elsőhöz kapcsolódó elemző az alapértelmezett.
 and=és
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=És műveleti jel
 and-or-operator=És/Vagy műveleti jel
 and-then-by=és aztán
