--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Unggahan Produk Cloud Commerce Analytics (Automatic Tra
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Tentukan penganalisa yang akan digunakan pada bidang dokumen input. Jika dibiarkan kosong, default ini ke penganalisa yang terkait dengan entri pertama dalam konfigurasi bidang. (Automatic Translation)
 and=Dan
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=dan Operator (Automatic Translation)
 and-or-operator=dan/atau operator (Automatic Translation)
 and-then-by=Dan Kemudian Dengan
