--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1476,7 +1476,7 @@ analytics-upload-product=Caricamento dei Prodotti di Analytics Cloud Commerce
 analyzer=Analizzatore
 analyzer-help=Specificare l'analizzatore da utilizzare nei campi del documento di input. Se lasciato vuoto, per impostazione predefinita viene utilizzato l'analizzatore associato alla prima voce nella configurazione dei campi.
 and=E
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Operatore e
 and-or-operator=Operatore e/o
 and-then-by=E poi da
