--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=העלאת מוצרי מסחר בענן של Analytics 
 analyzer=מנתח (Automatic Translation)
 analyzer-help=ציין את המנתח לשימוש בשדות מסמך הקלט. אם אפשרות זו נשארת ריקה, ברירת המחדל היא למנתח המשויך לערך הראשון בתצורת השדות. (Automatic Translation)
 and=וגם
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=ואופרטור
 and-or-operator=אופרטור ו/או
 and-then-by=ולאחר מכן על פי
