--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloudコマース製品のアップロード
 analyzer=アナライザー
 analyzer-help=自由形式テキストの分析に使用するアナライザーです。デフォルトはフィールド内の最初のフィールドに関連付けられたアナライザーです。
 and=および
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=AND記号
 and-or-operator=AND/OR演算子
 and-then-by=第２ソート順
