--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=애널리틱스 클라우드 커머스 상품 업로드
 analyzer=애널라이저
 analyzer-help=입력 문서 필드에 사용할 애널라이저를 입력하십시오. 입력하지 않으면 필드 설정 내 첫번째 항목에 연관된 애널라이저가 기본 선택됩니다.
 and=그리고
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=AND 연산자
 and-or-operator=AND/OR 연산자
 and-then-by=그리고 이후 다음에 의해
