--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product="Analytics Cloud Commerce" produktų nusiuntimas (Autom
 analyzer=Analizatorius (Automatic Translation)
 analyzer-help=Nurodykite analizatorių, kuris bus naudojamas įvesties dokumento laukuose. Jei jis paliekamas tuščias, tai numatyta analizatoriui, susietam su pirmuoju laukų konfigūracijos įrašu. (Automatic Translation)
 and=Ir (Automatic Translation)
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Ir operatorius (Automatic Translation)
 and-or-operator=Ir (arba) operatorius (Automatic Translation)
 and-then-by=Ir tada iki (Automatic Translation)
