--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analisis Muat Naik Produk Perdagangan Awan (Automatic T
 analyzer=Penganalisi (Automatic Translation)
 analyzer-help=Tentukan penganalisis untuk digunakan pada medan dokumen input. Jika dibiarkan kosong, ini lalai kepada penganalisi yang dikaitkan dengan entri pertama dalam konfigurasi medan. (Automatic Translation)
 and=Dan (Automatic Translation)
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Dan Operator (Automatic Translation)
 and-or-operator=Dan/Atau Operator (Automatic Translation)
 and-then-by=Dan Kemudian Oleh (Automatic Translation)
