--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Opplasting av Analytics Cloud Commerce-produkter (Autom
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Angi analysatoren som skal brukes i feltene i inndatadokumentet. Hvis du lar feltet stå tomt, brukes analysatoren som er knyttet til den første oppføringen i feltkonfigurasjonen, som standard. (Automatic Translation)
 and=Og
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Og-opertør
 and-or-operator=Og/Eller-operatør
 and-then-by=Og så ved
