--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Producten handel uploaden van Analytics Cloud
 analyzer=Analysator
 analyzer-help=De analysator die wordt gebruikt om vrije tekst te analyseren. Standaard is dit de analysator die gekoppeld is aan het eerste veld in velden.
 and=En
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=En-operator
 and-or-operator=En/Of Operator
 and-then-by=en dan op
