--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Upload de produtos do comércio Analytics Cloud
 analyzer=Analisador
 analyzer-help=O analisador que é usado para analisar o texto de forma livre. Padrões para o analisador associado com o primeiro campo nos campos.
 and=e
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Operador E
 and-or-operator=Operador E/Ou
 and-then-by=E então por
