--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Upload de produtos de comércio em nuvem de análise (A
 analyzer=analisador (Automatic Translation)
 analyzer-help=Especifique o analisador para usar nos campos do documento de entrada. Se deixado em branco, isso padrão para o analisador associado à primeira entrada na configuração de campos. (Automatic Translation)
 and=E
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=e Operador
 and-or-operator=Operador E/Ou
 and-then-by=E então por
