--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Încărcarea produselor de comerț în cloud Analytics 
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Specificați analizorul de utilizat în câmpurile documentului de intrare. Dacă este lăsat necompletat, acest lucru este implicit pentru analizorul asociat cu prima intrare în configurația câmpurilor. (Automatic Translation)
 and=Și
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Și operator (Automatic Translation)
 and-or-operator=și/sau operator (Automatic Translation)
 and-then-by=Și după de
