--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Аналитика Облако Коммерция Пр
 analyzer=анализатор (Automatic Translation)
 analyzer-help=Укажите анализатор для использования на полях входного документа. Если оставить пустым, это по умолчанию анализатор, связанный с первой записью в конфигурации полей. (Automatic Translation)
 and=И
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=И оператор (Automatic Translation)
 and-or-operator=И/или оператор (Automatic Translation)
 and-then-by=И после этого на
