--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Nahrávanie produktov Služby Analytics Cloud Commerce 
 analyzer=analyzátor (Automatic Translation)
 analyzer-help=Zadajte analyzátor, ktorý sa má použiť v poliach vstupného dokumentu. Ak ponecháte pole prázdne, toto nastavenie sa predvolene na analyzátor priradené k prvej položke v konfigurácii polí. (Automatic Translation)
 and=A
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Operátor AND
 and-or-operator=Operátor a/alebo
 and-then-by=A potom podľa
