--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Nalaganje izdelkov storitve Analytics Cloud Commerce (A
 analyzer=Analizator (Automatic Translation)
 analyzer-help=Določite analizator, ki ga želite uporabiti v poljih vnosnega dokumenta. Če ostane prazno, se to privzame analizatorju, povezanem s prvim vnosom v konfiguraciji polj. (Automatic Translation)
 and=In
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=In operater (Automatic Translation)
 and-or-operator=In/ali operater (Automatic Translation)
 and-then-by=In potem z (Automatic Translation)
