--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Uppladdning av handelsprodukt i Analytics Cloud
 analyzer=Analysverktyg
 analyzer-help=Analysverktyget som används för att analysera friformstext. Standard är analysverktyg som är associerat med det första fältet i fält.
 and=och
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Och operator
 and-or-operator=Och/eller operator
 and-then-by=och sedan på
