--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Bulut Ticaret Ürünleri Yükleme (Automatic 
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Giriş belgesinin alanlarında kullanılacak çözümleyiciyi belirtin. Boş bırakılırsa, bu varsayılan olarak alan yapılandırmasındaki ilk girişle ilişkili çözümleyiciyi gösterir. (Automatic Translation)
 and=Ve
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Ve İşleç (Automatic Translation)
 and-or-operator=Ve/veya İşleç (Automatic Translation)
 and-then-by=Ve sonra tarafından (Automatic Translation)
