--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Tải lên sản phẩm thương mại đám mây Analy
 analyzer=Analyzer (Automatic Translation)
 analyzer-help=Chỉ định trình phân tích để sử dụng trên các trường của tài liệu đầu vào. Nếu để trống, điều này mặc định với trình phân tích được liên kết với mục đầu tiên trong cấu hình trường. (Automatic Translation)
 and=và
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Toán hạng Và (And)
 and-or-operator=Toán hạng Và/Hoặc (And/Or)
 and-then-by=Tiếp theo bởi
