--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloud 商务产品上传
 analyzer=分析器
 analyzer-help=用于分析自由格式文本的分析器。默认值为与字段中的第一个字段相关联的分析器。
 and=并且
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=和操作员
 and-or-operator=和/或操作员
 and-then-by=然后通过
