--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce 商品上傳
 analyzer=Analyzer
 analyzer-help=指定分析儀用於輸入文件的欄位。如果留空，則此預設為與字段配置中的第一個條目相關的分析儀。 (Automatic Translation)
 and=並且
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=And 運算子
 and-or-operator=And/Or 運算子
 and-then-by=然後
