--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Carga de productos de Commerce de Analytics Cloud
 analyzer=Analizador
 analyzer-help=Analizador que se usará para analizar el texto de forma libre. Por defecto, se usa el analizador asociado al primer campo.
 and=y
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Y operador
 and-or-operator=Y/o operador
 and-then-by=y después por
