--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Analytics Cloud Commerce Products Upload (Automatic Cop
 analyzer=Analyzer (Automatic Copy)
 analyzer-help=Specify the analyzer to use on the input document's fields. If left blank, this defaults to the analyzer associated with the first entry in the fields configuration. (Automatic Copy)
 and=I
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=operator I
 and-or-operator=I/ILI operator
 and-then-by=I onda sa
