--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1477,7 +1477,7 @@ analytics-upload-product=Przesyłanie produktów chmury firmy Analytics (Automat
 analyzer=Analizator (Automatic Translation)
 analyzer-help=Określ analizator do użycia w polach dokumentu wejściowego. Jeśli pozostanie puste, to domyślnie do analizatora skojarzonego z pierwszym wpisem w konfiguracji pól. (Automatic Translation)
 and=I
-and-contains=AND contains (Automatic Copy)
+and-contains=And Contains (Automatic Copy)
 and-operator=Operator koniunkcji (AND)
 and-or-operator=Operator i/lub
 and-then-by=Następnie po
