--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=عودة
 back-to-cart=رجوع إلى العربة
 back-to-menu=رجوع إلى القائمة
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=العودة إلى البحث
 back-to-selection=عودة إلى التحديد
 back-to-the-list=رجوع إلى القائمة
