--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Обратно
 back-to-cart=Обратно в кошницата (Automatic Translation)
 back-to-menu=Обратно към менюто (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Назад към търсенето (Automatic Translation)
 back-to-selection=Назад към селекцията (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
