--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Vés enrere
 back-to-cart=Tornar al carretó
 back-to-menu=Torna al menú
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Tornar a la cerca
 back-to-selection=Torna a Selecció
 back-to-the-list=Torna a la llista
