--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Zurück
 back-to-cart=Zurück zum Warenkorb
 back-to-menu=Zurück zum Menü
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Zurück zur Suche
 back-to-selection=Zurück zur Auswahl
 back-to-the-list=Zurück zur Liste
