--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Επιστροφή
 back-to-cart=Επιστροφή στο καλάθι (Automatic Translation)
 back-to-menu=Επιστροφή στο μενού (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Επιστροφή στην αναζήτηση
 back-to-selection=Επιστροφή στην επιλογή (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
