--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=Back (Automatic Copy)
 back-to-cart=Back to Cart (Automatic Copy)
 back-to-menu=Back to Menu (Automatic Copy)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Back to Search (Automatic Copy)
 back-to-selection=Back to Selection (Automatic Copy)
 back-to-the-list=Back to the List (Automatic Copy)
