--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Tagasi
 back-to-cart=Tagasi ostukorvi (Automatic Translation)
 back-to-menu=Tagasi menüüsse (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Tagasi otsingusse (Automatic Translation)
 back-to-selection=Tagasi valikusse (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
