--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Retour
 back-to-cart=Retour au panier
 back-to-menu=Retour au menu
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Retour à la recherche
 back-to-selection=Retour à la sélection
 back-to-the-list=Retour à la liste
