--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Atrás
 back-to-cart=Volver ao carriño
 back-to-menu=Volver ao menú
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Volver á busqueda
 back-to-selection=Voltar á selección
 back-to-the-list=Back to the List (Automatic Copy)
