--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=वापस
 back-to-cart=वापस गाड़ी के लिए (Automatic Translation)
 back-to-menu=मेनू में वापस (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=खोज के लिए वापस (Automatic Translation)
 back-to-selection=चयन के लिए वापस (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
