--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -2239,7 +2239,7 @@ b2x=B2X
 back=Indietro
 back-to-cart=Torna al Carrello
 back-to-menu=Torna al menu (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Torna alla Ricerca
 back-to-selection=Ritorna alla Selezione
 back-to-the-list=Back to the List (Automatic Copy)
