--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=뒤
 back-to-cart=장바구니로 돌아가기
 back-to-menu=메뉴로 돌아가기
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=다시 검색
 back-to-selection=선택 화면으로 돌아가기
 back-to-the-list=목록으로 돌아가기
