--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Terug
 back-to-cart=Terug naar Winkelwagen
 back-to-menu=Terug naar menu
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Terug naar zoeken
 back-to-selection=Terug naar selectie
 back-to-the-list=Terug naar de lijst
