--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -2240,7 +2240,7 @@ b2x=B2X ( B2X ) (Automatic Translation)
 back=Powrót
 back-to-cart=Zwróć do koszyka
 back-to-menu=Powrót do menu (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Powrót do wyszukiwarki
 back-to-selection=Wróć do wybierania
 back-to-the-list=Back to the List (Automatic Copy)
