--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=Tillbaka
 back-to-cart=Tillbaka till kundvagnen
 back-to-menu=Tillbaka till meny
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Tillbaka till Sök
 back-to-selection=Tillbaka till val
 back-to-the-list=Tillbaka till listan
