--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=பின்செல்
 back-to-cart=தேடலுக்கு திரும்புக
 back-to-menu=Back to Menu (Automatic Copy)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=தேடலுக்கு திரும்புக
 back-to-selection=முந்தைய பக்கத்திற்கு செல்
 back-to-the-list=Back to the List (Automatic Copy)
