--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=กลับ
 back-to-cart=กลับสู่ตะกร้าสินค้า
 back-to-menu=กลับสู่เมนู
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=กลับสู่การค้นหา
 back-to-selection=กลับไปที่การเลือก
 back-to-the-list=กลับสู่รายการ
