--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -2240,7 +2240,7 @@ b2x=B2X
 back=返回
 back-to-cart=回到購物車
 back-to-menu=返回選單
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=回到搜尋
 back-to-selection=回到選取
 back-to-the-list=返回至清單
