--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Copy)
 back=Zpět
 back-to-cart=Back to Cart (Automatic Copy)
 back-to-menu=Back to Menu (Automatic Copy)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Zpět k vyhledávání
 back-to-selection=Zpět na výběr
 back-to-the-list=Back to the List (Automatic Copy)
