--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Tilbage
 back-to-cart=Back to Cart (Automatic Copy)
 back-to-menu=Tilbage til menuen (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Tilbage til søgning
 back-to-selection=Tilbage til markeringen (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
