--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Atgal (Automatic Translation)
 back-to-cart=Atgal į krepšelį (Automatic Translation)
 back-to-menu=Grįžti į meniu (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Grįžti į iešką (Automatic Translation)
 back-to-selection=Grįžti į pažymėtą sritį (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
