--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Voltar
 back-to-cart=Voltar ao Carrinho
 back-to-menu=De volta ao Menu (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Voltar à Pesquisa
 back-to-selection=Voltar à Selecção
 back-to-the-list=Back to the List (Automatic Copy)
