--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2240,7 +2240,7 @@ b2x=B2X (Automatic Translation)
 back=Quay lại
 back-to-cart=Quay trở lại Giỏ hàng
 back-to-menu=Quay lại Menu (Automatic Translation)
-back-to-parent-configuration=Back To Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
 back-to-search=Quay lại mục tìm kiếm
 back-to-selection=Quay lại Lựa chọn (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
