LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -3284,7 +3284,7 @@ click-goal=هدف النقر
 click-goal-description=حدد عنصرًا قابلا للنقر والمطلوب قياسه باستخدام زر تحديد أو بإدخال معرفه في الحقل أدناه.
 click-here-for-documentation=انقر هنا لمطالعة الوثائق.
 click-here-to-preview-the-form-in-a-new-window=انقر هنا لمعاينة النموذج من نافذة جديدة.
-click-here-to-save-it-now=<"a class="{0}" href="{1}>اضغط هنا</a> لحفظها الآن.
+click-here-to-save-it-now=<a class="{0}" href="{1}">اضغط هنا</a> لحفظها الآن.
 click-ok-to-create-a-new-thread-with-the-following-messages=اضغط على <em>موافق</em> لإنشاء نقاش جديد بالرسائل التالية.
 click-on-any-tag-to-edit-it=أنقر أي تصنيف لتعديله.
 click-on-the-plus-button-to-add-the-first-one=انقر فوق زر زائد لإضافة الأول.
