--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -15330,7 +15330,7 @@ stop-words-help=Una matriu de paraules buides. Qualsevol paraula d'aquest conjun
 storage-folder=Carpeta d'emmagatzematge
 storage-folder-path-cannot-be-greater-than-255-characters=El camí de la carpeta d'emmagatzematge no pot tenir més de 255 caràcters.
 storage-type=Tipus d'emmagatzematge
-storage.size.suffix.b=Mil milions
+storage.size.suffix.b=B
 storage.size.suffix.gb=GB
 storage.size.suffix.kb=kB
 storage.size.suffix.mb=MB
