--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -15330,7 +15330,7 @@ stop-words-help=Matriz de palabras no significativas. Todas las palabras de este
 storage-folder=Carpeta de almacenamiento
 storage-folder-path-cannot-be-greater-than-255-characters=La ruta de la carpeta de almacenamiento no puede tener más de 255 caracteres.
 storage-type=Tipo de almacenamiento
-storage.size.suffix.b=millardo
+storage.size.suffix.b=B
 storage.size.suffix.gb=GB
 storage.size.suffix.kb=KB
 storage.size.suffix.mb=MB
