--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -15328,7 +15328,7 @@ stop-words-help=Enter a list of stop words to be considered "uninteresting" and 
 storage-folder=Storage Folder (Automatic Copy)
 storage-folder-path-cannot-be-greater-than-255-characters=Storage folder path cannot be greater than 255 characters. (Automatic Copy)
 storage-type=Tipo de almacenamento
-storage.size.suffix.b=millardo
+storage.size.suffix.b=B
 storage.size.suffix.gb=GB
 storage.size.suffix.kb=KB
 storage.size.suffix.mb=MB
